# ELF

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
include/elfparser/arch/: ArchFactory.h  IArchHandler.h
include/elfparser/arch/aarch64/: AArch64Handler.h
include/elfparser/arch/riscv/: RiscvHandler.h
include/elfparser/arch/x86_64/: X86_64Handler.h
include/elfparser/builder/: ElfBuilder.h
include/elfparser/builder/components/headers/: EhdrBuilder.h  PhdrBuilder.h  ShdrBuilder.h
include/elfparser/builder/components/sections/: SectionBuilder.h  StringTableBuilder.h
include/elfparser/builder/components/segments/: DynamicSegmentBuilder.h  LoadSegmentBuilder.h  NoteSegmentBuilder.h  SegmentBuilder.h
include/elfparser/builder/layout/: LayoutManager.h
include/elfparser/builder/layout/strategies/: CompactLayoutStrategy.h  DefaultLayoutStrategy.h  ILayoutStrategy.h
include/elfparser/common/: Types.h
include/elfparser/factory/: DynamicEntryFactory.h  NoteFactory.h  RelocationFactory.h  SectionFactory.h  SegmentFactory.h  SymbolFactory.h  VersionFactory.h
include/elfparser/interface/: IDynamicEntry.h  INode.h  INote.h  IRelocation.h  ISection.h  ISegment.h  ISymbol.h  IVersionDefinition.h  IVersionRequirement.h  IVisitor.h
include/elfparser/io/: BinaryReader.h  BinaryWriter.h
include/elfparser/model/: ElfStructures.h
include/elfparser/model/enums/: ElfClass.h  ElfData.h  ElfDynamicTag.h  ElfMachine.h  ElfNoteType.h  ElfOsAbi.h  ElfSectionType.h  ElfSegmentType.h  ElfSymbolBinding.h  ElfSymbolType.h  ElfSymbolVisibility.h  ElfType.h  ElfVersion.h  ElfVersionType.h
include/elfparser/model/impl/: DynamicEntryImpl.h  NoteImpl.h  RelocationImpl.h  SectionImpl.h  SegmentImpl.h  SymbolImpl.h  VersionDefinitionImpl.h  VersionRequirementImpl.h
include/elfparser/model/structs/: ElfDyn.h  ElfEhdr.h  ElfHash.h  ElfNhdr.h  ElfPhdr.h  ElfRel.h  ElfShdr.h  ElfSym.h  ElfVerDef.h  ElfVerNeed.h  ElfVerSym.h
include/elfparser/parser/: ElfParser.h
include/elfparser/parser/components/: HeaderParser.h  SectionParser.h  SegmentParser.h
include/elfparser/parser/components/headers/: EhdrParser.h  PhdrParser.h  ShdrParser.h
include/elfparser/plugins/api/: IElfAPI.h  IFileSystemAPI.h  ILoggerAPI.h
include/elfparser/plugins/core/: IPlugin.h  PluginContext.h  PluginInfo.h  PluginManager.h
include/elfparser/plugins/events/: Event.h  EventDispatcher.h  EventTypes.h  IEventListener.h
include/elfparser/plugins/extension/: IAnalysisExtension.h  IBuilderExtension.h  IExtension.h  IParserExtension.h  ITransformationExtension.h  IValidatorExtension.h
include/elfparser/plugins/hooks/io/: IIOHook.h
include/elfparser/plugins/loaders/: IPluginLoader.h  StaticPluginLoader.h
include/elfparser/plugins/registry/: IExtensionRegistry.h  PluginRegistry.h
include/elfparser/transform/: ITransformation.h
include/elfparser/transform/actions/: RemoveSectionAction.h  StripSymbolsAction.h
include/elfparser/utils/: ElfSwap.h  Endian.h  Logger.h
include/elfparser/validator/: IValidator.h
include/elfparser/validator/components/: EhdrValidator.h  PhdrValidator.h  ShdrValidator.h
include/elfparser/visitor/: BaseVisitor.h
src/: CMakeLists.txt  Makefile  main.cpp
src/arch/: ArchFactory.cpp
src/arch/aarch64/: AArch64Handler.cpp
src/arch/riscv/: RiscvHandler.cpp
src/arch/x86_64/: X86_64Handler.cpp
src/builder/: ElfBuilder.cpp
src/builder/components/headers/: EhdrBuilder.cpp  PhdrBuilder.cpp  ShdrBuilder.cpp
src/builder/components/sections/: SectionBuilder.cpp  StringTableBuilder.cpp
src/builder/components/sections/dynamic/: DynamicSectionBuilder.cpp
src/builder/components/sections/hash/: GnuHashSectionBuilder.cpp  HashSectionBuilder.cpp
src/builder/components/sections/notes/: NoteSectionBuilder.cpp
src/builder/components/sections/relocations/: RelocationSectionBuilder.cpp
src/builder/components/sections/strings/: StringTableBuilder.cpp
src/builder/components/sections/symbols/: SymbolTableBuilder.cpp
src/builder/components/sections/version/: VersionDefinitionBuilder.cpp  VersionRequirementBuilder.cpp
src/builder/components/segments/: DynamicSegmentBuilder.cpp  LoadSegmentBuilder.cpp  NoteSegmentBuilder.cpp  SegmentBuilder.cpp
src/builder/components/segments/calculators/: DefaultSegmentCalculator.cpp  DynamicSegmentCalculator.cpp  LoadSegmentCalculator.cpp
src/builder/layout/: LayoutManager.cpp
src/builder/layout/strategies/: CompactLayoutStrategy.cpp  DefaultLayoutStrategy.cpp
src/factory/: DynamicEntryFactory.cpp  NoteFactory.cpp  RelocationFactory.cpp  SectionFactory.cpp  SegmentFactory.cpp  SymbolFactory.cpp  VersionFactory.cpp
src/io/: BinaryReader.cpp  BinaryWriter.cpp
src/parser/: ElfParser.cpp
src/parser/components/: HeaderParser.cpp  SectionParser.cpp  SegmentParser.cpp
src/parser/components/headers/: EhdrParser.cpp  PhdrParser.cpp  ShdrParser.cpp
src/parser/components/sections/: DynamicSectionParser.cpp  RelocationSectionParser.cpp  SymbolTableParser.cpp
src/parser/components/sections/dynamic/: DynamicSectionParser.cpp
src/parser/components/sections/hash/: GnuHashSectionParser.cpp  HashSectionParser.cpp
src/parser/components/sections/notes/: NoteSectionParser.cpp
src/parser/components/sections/relocations/: RelocationSectionParser.cpp
src/parser/components/sections/strings/: StringTableParser.cpp
src/parser/components/sections/symbols/: SymbolTableParser.cpp
src/parser/components/sections/version/: VersionDefinitionParser.cpp  VersionRequirementParser.cpp
src/plugins/core/: PluginContext.cpp  PluginManager.cpp
src/plugins/events/: EventDispatcher.cpp
src/plugins/loaders/: StaticPluginLoader.cpp
src/plugins/registry/: PluginRegistry.cpp
src/transform/actions/: RemoveSectionAction.cpp  StripSymbolsAction.cpp
src/utils/: Logger.cpp
src/validator/components/: EhdrValidator.cpp  PhdrValidator.cpp  ShdrValidator.cpp
tests/: CMakeLists.txt  Makefile  TestBuilderComponents.cpp  TestElfBuilder.cpp  TestElfParser.cpp  TestFramework.h  TestPlugins.cpp  main_test.cpp
(+33 files in other folders)
